--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -199,18 +199,34 @@
 }
 
 /*******************************************************/
-@keyframes enter-the-man-below {
+
+@keyframes enter-the-man-left {
   0% {
-    margin-top: 40vh;
+    margin-left: -40vh;
   }
   10% {
-    margin-top: 29vh;
+    margin-left: -29vh;
   }
   25% {
-    margin-top: 32vh;
+    margin-left: -32vh;
   }
   100% {
-    margin-top: 3vh;
+    margin-left: -10vh;
+  }
+}
+
+@keyframes bumping-man {
+  0% {
+    margin-left: -10vh;
+  }
+  10% {
+    margin-left: -8vh;
+  }
+  25% {
+    margin-left: -10vh;
+  }
+  100% {
+    margin-left: -9vh;
   }
 }
 
@@ -223,6 +239,18 @@
   }
   100% {
     top: 0vh;
+  }
+}
+
+@keyframes enter-the-menu-right {
+  0% {
+    left: 100vw;
+  }
+  50% {
+    left: -10vw;
+  }
+  100% {
+    left: 0vw;
   }
 }
 
@@ -274,7 +302,9 @@
     top: 0vh;
   }
   100% {
-    top: -78vh;
+    top: -88vh;
+    z-index: 5;
+    background-color: white;
   }
 }
 
@@ -288,15 +318,12 @@
 }
 
 @keyframes rotate-twice {
-  33% {
-    transform: rotate(40deg);
-  }
-  66% {
-    transform: rotate(-30deg);
-    background-color: black;
+  50% {
+    transform: rotate(360deg);
   }
   100% {
     transform: rotate(0deg);
+    background-color: black;
   }
 }
 
