--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -45,6 +45,9 @@ body {
   z-index: 5;
   background-color: black;
   box-shadow: 0 0 1vh black;
+  @include desktop-only {
+    max-height: 8vh;
+  }
 }
 
 .band-logo {
@@ -52,26 +55,29 @@ body {
   width: 10vh;
   margin-bottom: 5vh;
   position: absolute;
-  top: -1vh;
+  top: 0vh;
   right: 1.6vh;
   z-index: 5;
   background-color: rgba(211, 211, 211, 0.5);
   border-radius: 50%;
   border: 0.3vh solid orange;
-  box-shadow: -1vh 0 1vh black;
+  box-shadow: 0 1vh 1vh black;
   &:hover {
-    animation: rotate-twice 2s ease-in-out forwards;
+    animation: rotate-twice 2s ease-out forwards;
   }
 }
 
 .page-content {
   max-width: 75vw;
-  height: 88vh;
+  @include desktop-only {
+    max-width: 100%;
+  }
+  height: 80vh;
   margin-top: 5vh;
   margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.623);
   position: absolute;
-  left: 5%;
+  left: 0;
   top: 3vh;
   right: 5%;
   bottom: 5%;
@@ -85,16 +91,23 @@ body {
   z-index: 3;
   align-content: flex-start;
   align-items: center;
-  justify-content: flex-start;
   text-align: center;
   margin-bottom: 1vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  flex-grow: 1;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   & p {
     box-sizing: border-box;
     font-family: "Roboto";
     display: flex;
     flex-direction: row;
-    padding: 5vw 0;
+    padding: 3vh 0;
     overflow: hidden;
     margin: 0 5%;
     width: 90%;
@@ -105,13 +118,12 @@ body {
     justify-items: space-around;
     justify-content: space-around;
     flex-shrink: 1;
-    font-size: 5vw;
+    font-size: 3vh;
     color: black;
   }
   & img {
     object-fit: cover;
     display: flex;
-    max-height: 25%;
     background-color: transparent;
     overflow: hidden;
 
@@ -131,14 +143,36 @@ body {
   &--home {
     background-color: rgba(206, 206, 206, 0.548);
     display: flex;
-    flex-direction: column;
-    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    overflow-y: scroll;
+    & p {
+      width: 50%;
+    }
+
     & img {
-      margin-top: 10vh;
-      width: 80%;
+      margin-top: 5vh;
+      width: 100%;
       border-radius: 1vh;
       box-shadow: 1vh 1vh 0.5vh black;
       border: 1px solid white;
+      max-height: 50vh;
+    }
+    & h2,
+    h3 {
+      box-sizing: border-box;
+      color: rgb(255, 255, 255);
+      width: 60vw;
+      text-align: center;
+      margin: 0 0 3vh 0;
+      font-size: 2vh;
+      font-family: "Roboto";
+      text-shadow: 0 0 1vh black;
+      background-color: rgba(0, 0, 0, 0.849);
+      padding: 5% 5%;
+      margin-left: -3vh;
+      box-shadow: 0 0 1vw black;
     }
   }
 
@@ -154,6 +188,10 @@ body {
       object-fit: cover;
       margin-bottom: 3%;
       box-shadow: 1vw 1vw 0.5vw rgb(0, 0, 0);
+      @include desktop-only {
+        flex-basis: 30%;
+        margin-right: 3%;
+      }
       &:hover {
       }
     }
@@ -164,10 +202,29 @@ body {
     text-align: justify;
     word-break: break-word;
     background-color: rgba(0, 0, 0, 0.856);
+    justify-content: space-around;
+
+    & img {
+      display: flex;
+      flex-basis: 99%;
+      box-sizing: border-box;
+      width: 100%;
+      object-fit: cover;
+      margin-bottom: 3%;
+      box-shadow: 1vw 1vw 0.5vw rgb(0, 0, 0);
+      @include desktop-only {
+        flex-basis: 20%;
+        margin-right: 3%;
+      }
+    }
 
     & p {
       color: rgb(219, 219, 219);
       background-color: transparent;
+      @include desktop-only {
+        flex-basis: 60%;
+        margin-right: 3%;
+      }
     }
   }
 
@@ -179,6 +236,10 @@ body {
     }
     & .concert-container {
       width: 90%;
+      @include desktop-only {
+        width: 20%;
+        margin-right: 3%;
+      }
       height: max-content;
       display: flex;
       flex-direction: column;
@@ -188,6 +249,9 @@ body {
       margin-top: 3vh;
       box-shadow: 1vh 1vh 0.5vh black;
       border: 0.3vh solid rgb(245, 81, 5);
+      &:hover {
+        transform: scale(1.1);
+      }
     }
     & img {
       object-fit: cover;
@@ -202,6 +266,8 @@ body {
       color: white;
       background-color: black;
       border-radius: 0.8vh 0.8vh 0 0;
+
+      font-size: 5vh;
     }
 
     & .concert-description {
@@ -232,6 +298,9 @@ body {
       overflow: visible;
       margin: 1vh 1vh;
       flex-basis: 40%;
+      @include desktop-only {
+        flex-basis: 30%;
+      }
       color: rgb(255, 255, 255);
       background-color: rgba(0, 0, 0, 0.883);
       overflow: hidden;
@@ -335,43 +404,32 @@ body {
       }
     }
   }
-
-  & h2,
-  h3 {
-    box-sizing: border-box;
-    color: rgb(255, 255, 255);
-    width: 60vw;
-    text-align: center;
-    margin: 0 0 5vw 0;
-    font-size: 3vw;
-    font-family: "Roboto";
-    text-shadow: 0 0 2vw black;
-    background-color: rgba(0, 0, 0, 0.849);
-    padding: 5% 5%;
-    margin-left: -5vw;
-    box-shadow: 0 0 1vw black;
-  }
 }
 
 .the-man {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: fixed;
-  bottom: 0;
-  width: 100vw;
-  height: 40vh;
+  left: 0;
+  bottom: 89vh;
+  width: 20vh;
+  height: 20vh;
   padding: 0;
-  z-index: 2;
-  align-items: center;
+  z-index: 99;
+  align-content: flex-start;
 
   &__image {
     object-fit: contain;
-    object-position: bottom;
+    transform: rotate(90deg);
+    object-position: center;
     overflow: visible;
-    width: 60vw;
+    width: 100%;
     height: 40vh;
-    margin-top: 40vh;
-    animation: enter-the-man-below 2s 1s ease-in-out forwards;
+    margin-left: -40vh;
+    animation: enter-the-man-left 1s ease-in-out forwards;
+    &:hover {
+      animation: bumping-man 0.5s ease-in-out forwards;
+    }
   }
 }
 
@@ -388,8 +446,9 @@ body {
   z-index: 4;
 
   align-items: center;
-  align-content: flex-end;
+
   justify-content: flex-end;
+  padding: 0;
   background: linear-gradient(
     120deg,
     rgba(255, 255, 255, 0.76),
@@ -397,16 +456,46 @@ body {
     rgba(255, 255, 255, 0.76)
   );
 
+  @include desktop-only {
+    flex-direction: row;
+    top: 0vh;
+    right: 0vh;
+    left: 100vw;
+    align-items: flex-start;
+    align-content: flex-end;
+    height: 12vh;
+    width: 100vw;
+    justify-content: flex-end;
+
+    background: linear-gradient(
+      120deg,
+      rgba(110, 110, 110, 0.76),
+      rgba(34, 34, 34, 0.746)
+    );
+  }
+
   &--initial {
     animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+    @include desktop-only {
+      animation: enter-the-menu-right 1s ease-in-out forwards;
+    }
   }
 
   &--hidden {
     animation: send-to-top 1s ease-in-out forwards;
+    @include desktop-only {
+      animation: none;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
   }
 
   &--visible {
     animation: expand-to-bottom 1s ease-in-out forwards;
+    @include desktop-only {
+      animation: enter-the-menu-right 1s ease-in-out forwards;
+    }
   }
 
   &__item {
@@ -414,8 +503,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    height: 10vh;
+    align-content: flex-end;
+    height: 8vh;
     position: relative;
     bottom: 0;
     /*background-color: rgba(15, 15, 15, 0.308);*/
@@ -423,7 +512,12 @@ body {
     text-shadow: -0.3vw 0.3vw 0.5vw black;
     font-family: "Fascinate";
     font-size: 1.7vh;
-    margin-top: 1vh;
+    margin-top: 3vh;
+
+    @include desktop-only {
+      margin-top: 0vh;
+      margin-right: 10vw;
+    }
     &:hover {
       color: orange;
     }
@@ -435,7 +529,6 @@ body {
     & > :not(i) {
       height: 2vh;
       text-align: center;
-      color: white;
     }
     & i {
       /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 144, 18) 60%);*/
@@ -446,7 +539,10 @@ body {
         /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
       }
     }
-    &:nth-child(odd) {
+    &:nth-child(5) {
+      @include desktop-only {
+        display: none;
+      }
       /*box-shadow: -0.1vw -0.1vw 0.1vw rgb(255, 255, 255);*/
 
       /*border: 0.3vh solid orange;*/
