--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -203,9 +203,11 @@ body {
     word-break: break-word;
     background-color: rgba(0, 0, 0, 0.856);
     justify-content: space-around;
+    align-items: center;
 
     & img {
       display: flex;
+      flex-direction: row;
       flex-basis: 99%;
       box-sizing: border-box;
       width: 100%;
