--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -126,6 +126,7 @@ body {
     display: flex;
     background-color: transparent;
     overflow: hidden;
+    object-position:top;
 
     &:hover {
       /*animation: opacity-to-one 5s linear forwards;*/
@@ -145,7 +146,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: flex-start;
+    align-content: flex-end;
+    justify-content: flex-end;
     overflow-y: scroll;
     & p {
       width: 50%;
@@ -157,7 +159,7 @@ body {
       border-radius: 1vh;
       box-shadow: 1vh 1vh 0.5vh black;
       border: 1px solid white;
-      max-height: 50vh;
+      max-height: 60vh;
     }
     & h2,
     h3 {
@@ -170,8 +172,7 @@ body {
       font-family: "Roboto";
       text-shadow: 0 0 1vh black;
       background-color: rgba(0, 0, 0, 0.849);
-      padding: 5% 5%;
-      margin-left: -3vh;
+      padding: 1% 1%;
       box-shadow: 0 0 1vw black;
     }
   }
@@ -409,25 +410,24 @@ body {
 }
 
 .the-man {
-  display: flex;
+  display: none;
   flex-direction: row;
   position: fixed;
-  left: 0;
-  bottom: 89vh;
-  width: 20vh;
-  height: 20vh;
+  left: 75vw;
+  top: 5vh;
+  width: 12vh;
+  height: 12vh;
   padding: 0;
-  z-index: 99;
+  z-index: 4;
   align-content: flex-start;
 
   &__image {
     object-fit: contain;
-    transform: rotate(90deg);
+    transform: rotate(180deg);
     object-position: center;
     overflow: visible;
     width: 100%;
-    height: 40vh;
-    margin-left: -40vh;
+    height: 100%;
     animation: enter-the-man-left 1s ease-in-out forwards;
     &:hover {
       animation: bumping-man 0.5s ease-in-out forwards;
