--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,7 +1,7 @@
 body {
   padding: 0 auto;
   background-color: black;
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -20,11 +20,54 @@ body {
   animation: enter-content-left 0.5s 0.25s ease-out forwards;
 }
 
+.spin-loader {
+  &__background {
+  position:fixed;
+  width:100vw;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background-color:white;
+  z-index:7;
+  animation: fade-out 4s ease-in forwards;
+  align-items:center;
+  justify-content: center;
+  display:flex;
+  flex-direction:row;
+  }
+  &__content {
+    width: 30vw;
+    height:30vw;
+    background-color:white;
+    border-radius: 50%;
+    align-content:center;
+    align-items:center;
+    background-color:transparent;
+    border-top: 1vw solid orange;
+    border-bottom: 1vw solid orange;
+    border-left: 1vw solid rgb(255, 255, 255);
+    border-right: 1vw solid rgb(255, 255, 255);
+    animation: rotate-twice-anticlock 4s linear infinite;
+    box-sizing:border-box;
+    
+    & img {
+      display:flex;
+      border-radius: 50%;
+      object-fit:cover;
+      object-position:center;
+      width:100%;
+      animation: rotate-twice 2s linear infinite;
+      background-color:black;
+    }
+  }
+}
 .main-content {
   position: relative;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  animation: fade-in 1.5s 3s linear forwards;
 
   &__background-image {
     object-fit: cover;
@@ -73,7 +116,7 @@ body {
     max-width: 100%;
   }
   height: 80vh;
-  margin-top: 5vh;
+  margin-top: 8vh;
   margin-left: -100vw;
   background-color: rgba(255, 255, 255, 0.623);
   position: absolute;
@@ -181,6 +224,7 @@ body {
     overflow-y: scroll;
     flex-direction: row;
     flex-wrap: wrap;
+    background: transparent;
     & img {
       display: flex;
       flex-basis: 99%;
@@ -240,7 +284,7 @@ body {
     & .concert-container {
       width: 90%;
       @include desktop-only {
-        width: 20%;
+        width: 28%;
         margin-right: 3%;
       }
       height: max-content;
@@ -336,13 +380,13 @@ body {
         }
       }
 
-      &:nth-child(1) {
+      &:nth-child(3) {
         & i {
           color: rgb(0, 204, 34);
         }
       }
 
-      &:nth-child(2) {
+      &:nth-child(4) {
         & i {
           background-image: linear-gradient(
             -45deg,
@@ -359,13 +403,13 @@ body {
         }
       }
 
-      &:nth-child(3) {
+      &:nth-child(5) {
         & i {
           color: rgb(49, 70, 255);
         }
       }
 
-      &:nth-child(4) {
+      &:nth-child(6) {
         & i {
           background: linear-gradient(
             270deg,
@@ -380,13 +424,13 @@ body {
         }
       }
 
-      &:nth-child(5) {
+      &:nth-child(7) {
         & i {
           color: rgb(255, 2, 2);
         }
       }
 
-      &:nth-child(6) {
+      &:nth-child(8) {
         & i {
           background: linear-gradient(
             180deg,
@@ -405,6 +449,20 @@ body {
         font-family: "Cabin Sketch", cursive;
         font-size: 2vw;
       }
+    }
+    & h2,
+    h3 {
+      box-sizing: border-box;
+      color: rgb(255, 255, 255);
+      width: 70vw;
+      text-align: center;
+      margin: 0 0 3vh 0;
+      font-size: 2vh;
+      font-family: "Roboto";
+      text-shadow: 0 0 1vh black;
+      background-color: rgba(255, 129, 25, 0.849);
+      padding: 1% 1%;
+      box-shadow: 0 0 1vw black;
     }
   }
 }
@@ -544,21 +602,6 @@ body {
     &:nth-child(5) {
       @include desktop-only {
         display: none;
-      }
-      /*box-shadow: -0.1vw -0.1vw 0.1vw rgb(255, 255, 255);*/
-
-      /*border: 0.3vh solid orange;*/
-      &:hover {
-        /*animation: circle-with-white-shadow 0.3s ease-in-out forwards;*/
-      }
-    }
-
-    &:nth-child(even) {
-      /*box-shadow: -0.2vh -0.2vh 0.2vh rgb(255, 161, 37);*/
-
-      /*border: 0.3vh solid white;*/
-      &:hover {
-        /*animation: circle-with-orange-shadow 0.5s ease-in-out forwards;*/
       }
     }
   }
