--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,23 +110,21 @@ The @ content directive allows for custom properties to be specified in the @inc
 }
 @keyframes rotate-twice {
   50% {
-    transform: rotate(180deg);
+    transform: rotate(720deg);
   }
   100% {
-    transform: rotate(360deg);
-    background-color: black;
+    transform: rotate(1440deg);
   }
 }
 @keyframes rotate-twice-anticlock {
   33% {
-    transform: rotate(360deg);
+    transform: rotate(-360deg);
   }
   66% {
-    transform: rotate(540deg);
+    transform: rotate(-720deg);
   }
   100% {
-    transform: rotate(0deg);
-    background-color: black;
+    transform: rotate(-1080deg);
   }
 }
 @keyframes opacity-to-one {
@@ -198,8 +196,7 @@ The @ content directive allows for custom properties to be specified in the @inc
     opacity: 1;
   }
   99% {
-    opacity: 90%;
-    height: 100%;
+    opacity: 1;
   }
   100% {
     opacity: 0;
@@ -210,9 +207,6 @@ The @ content directive allows for custom properties to be specified in the @inc
 @keyframes fade-in {
   0% {
     opacity: 0;
-  }
-  99% {
-    opacity: 0.9;
   }
   100% {
     opacity: 1;
@@ -247,9 +241,9 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: white;
+  background-color: black;
   z-index: 7;
-  animation: fade-out 4s ease-in forwards;
+  animation: fade-out 5s ease-in forwards;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -263,20 +257,23 @@ body {
   align-content: center;
   align-items: center;
   background-color: transparent;
-  border-top: 1vw solid orange;
-  border-bottom: 1vw solid orange;
-  border-left: 1vw solid white;
-  border-right: 1vw solid white;
+  border-top: 2vw solid orange;
+  border-bottom: 2vw solid orange;
+  border-left: 2vw solid white;
+  border-right: 2vw solid white;
   animation: rotate-twice-anticlock 4s linear infinite;
   box-sizing: border-box;
 }
 .spin-loader__content img {
   display: flex;
+  box-sizing: border-box;
+  margin-left: 25%;
+  margin-top: 25%;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
-  width: 100%;
-  animation: rotate-twice 2s linear infinite;
+  width: 50%;
+  animation: rotate-twice 3s linear infinite;
   background-color: black;
 }
 
@@ -334,7 +331,6 @@ body {
   height: 80vh;
   margin-top: 8vh;
   margin-left: -100vw;
-  background-color: rgba(255, 255, 255, 0.623);
   position: absolute;
   left: 0;
   top: 3vh;
@@ -404,11 +400,10 @@ body {
   animation: width-to-75 1s ease-in-out forwards;
 }
 .page-content--home {
-  background-color: rgba(206, 206, 206, 0.548);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: flex-end;
+  align-content: flex-start;
   justify-content: flex-end;
   overflow-y: scroll;
 }
@@ -418,10 +413,9 @@ body {
 .page-content--home img {
   margin-top: 5vh;
   width: 100%;
-  border-radius: 1vh;
   box-shadow: 1vh 1vh 0.5vh black;
-  border: 1px solid white;
   max-height: 60vh;
+  margin-bottom: 5vh;
 }
 .page-content--home h2,
 .page-content--home h3 {
@@ -502,6 +496,27 @@ body {
 .page-content--concert p {
   background-color: transparent;
 }
+.page-content--concert h2,
+.page-content--concert h3 {
+  box-sizing: border-box;
+  color: white;
+  width: 30vw;
+  text-align: center;
+  margin: 0 0 0 0;
+  margin-left: 0;
+  font-size: 2vh;
+  font-family: "Roboto";
+  text-shadow: 0 0 1vh black;
+  background-color: rgba(255, 129, 25, 0.849);
+  padding: 0.5%;
+  box-shadow: 0 0 1vw black;
+}
+@media screen and (min-width: 1080px) {
+  .page-content--concert h2,
+.page-content--concert h3 {
+    margin-right: 60vw;
+  }
+}
 .page-content--concert .concert-container {
   width: 90%;
   height: max-content;
@@ -551,7 +566,8 @@ body {
   justify-content: space-around;
   background-color: transparent;
 }
-.page-content--listen p {
+.page-content--listen a {
+  text-decoration: none;
   box-sizing: border-box;
   font-family: "Roboto";
   display: flex;
@@ -566,17 +582,17 @@ body {
   box-shadow: 1vh 1vh 0.5vh black;
 }
 @media screen and (min-width: 1080px) {
-  .page-content--listen p {
+  .page-content--listen a {
     flex-basis: 30%;
   }
 }
-.page-content--listen p:hover {
+.page-content--listen a:hover {
   opacity: 1;
 }
-.page-content--listen p:hover i {
+.page-content--listen a:hover i {
   transform: scale(1.1);
 }
-.page-content--listen p i {
+.page-content--listen a i {
   display: flex;
   align-items: center;
   align-content: center;
@@ -592,41 +608,41 @@ body {
   flex-grow: 1;
   text-shadow: 0 0 3vw rgba(0, 0, 0, 0.815);
 }
-.page-content--listen p i:hover {
+.page-content--listen a i:hover {
   /*color: white;
   transform: scale(1.1);*/
 }
-.page-content--listen p:nth-child(3) i {
+.page-content--listen a:nth-child(3) i {
   color: #00cc22;
 }
-.page-content--listen p:nth-child(4) i {
+.page-content--listen a:nth-child(4) i {
   background-image: linear-gradient(-45deg, #35c3f3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #fed2ce 100%);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.2);
 }
-.page-content--listen p:nth-child(5) i {
+.page-content--listen a:nth-child(5) i {
   color: #3146ff;
 }
-.page-content--listen p:nth-child(6) i {
+.page-content--listen a:nth-child(6) i {
   background: linear-gradient(270deg, #e100ff, #11c1f7, green);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
 }
-.page-content--listen p:nth-child(7) i {
+.page-content--listen a:nth-child(7) i {
   color: #ff0202;
 }
-.page-content--listen p:nth-child(8) i {
+.page-content--listen a:nth-child(8) i {
   background: linear-gradient(180deg, #030303, #ff9101, white);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.1);
 }
-.page-content--listen p > :not(i) {
+.page-content--listen a > :not(i) {
   font-family: "Cabin Sketch", cursive;
   font-size: 2vw;
 }
@@ -674,7 +690,7 @@ body {
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 0;
+  top: 100vh;
   right: 3vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
@@ -688,7 +704,7 @@ body {
 @media screen and (min-width: 1080px) {
   .nav-bar {
     flex-direction: row;
-    top: 0vh;
+    top: 0;
     right: 0vh;
     left: 100vw;
     align-items: flex-start;
@@ -700,7 +716,7 @@ body {
   }
 }
 .nav-bar--initial {
-  animation: enter-the-menu-below 1s 2.5s ease-in-out forwards;
+  animation: enter-the-menu-below 1s 4s ease-in-out forwards;
 }
 @media screen and (min-width: 1080px) {
   .nav-bar--initial {
