--- a/public/css/style.css
+++ b/public/css/style.css
@@ -695,7 +695,7 @@ body {
   right: 3vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
-  height: 85%;
+  height: 85vh;
   z-index: 4;
   align-items: center;
   justify-content: flex-end;
