--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -522,7 +522,7 @@ body {
 
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
-  height: 85%;
+  height: 85vh;
   z-index: 4;
 
   align-items: center;
