--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,7 +95,7 @@ The @ content directive allows for custom properties to be specified in the @inc
     top: 0vh;
   }
   100% {
-    top: -65vh;
+    top: -52vh;
     z-index: 3;
     background-color: white;
     border-radius: 10vw;
@@ -103,7 +103,7 @@ The @ content directive allows for custom properties to be specified in the @inc
 }
 @keyframes expand-to-bottom {
   0% {
-    top: -95vh;
+    top: -35vh;
   }
   100% {
     top: 0vh;
@@ -695,11 +695,12 @@ body {
   right: 3vh;
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
-  height: 85vh;
+  max-height: 90vh;
   z-index: 4;
   align-items: center;
   justify-content: flex-end;
   padding: 0;
+  padding-top: 8vh;
   background: linear-gradient(120deg, rgba(255, 255, 255, 0.76), rgba(73, 73, 73, 0.561), rgba(255, 255, 255, 0.76));
 }
 @media screen and (min-width: 1080px) {
@@ -757,7 +758,7 @@ body {
   text-shadow: -0.3vw 0.3vw 0.5vw black;
   font-family: "Fascinate";
   font-size: 1.7vh;
-  margin-top: 3vh;
+  margin-top: 5vh;
 }
 @media screen and (min-width: 1080px) {
   .nav-bar__item {
