--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -522,13 +522,15 @@ body {
 
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
-  height: 85vh;
+  max-height: 90vh;
   z-index: 4;
+
 
   align-items: center;
 
   justify-content: flex-end;
   padding: 0;
+  padding-top: 8vh;
   background: linear-gradient(
     120deg,
     rgba(255, 255, 255, 0.76),
@@ -592,7 +594,7 @@ body {
     text-shadow: -0.3vw 0.3vw 0.5vw black;
     font-family: "Fascinate";
     font-size: 1.7vh;
-    margin-top: 3vh;
+    margin-top: 5vh;
 
     @include desktop-only {
       margin-top: 0vh;
