--- a/public/css/style.css
+++ b/public/css/style.css
@@ -349,7 +349,7 @@ body {
   align-items: center;
   text-align: center;
   margin-bottom: 1vh;
-  padding-top: 5vh;
+  padding-top: 5vw;
   padding-bottom: 5vh;
   -ms-overflow-style: none;
   /* IE and Edge */
@@ -360,6 +360,7 @@ body {
 @media screen and (min-width: 1080px) {
   .page-content {
     max-width: 100%;
+    height: 70vh;
   }
 }
 .page-content::-webkit-scrollbar {
@@ -713,10 +714,12 @@ body {
     left: 100vw;
     align-items: flex-start;
     align-content: flex-end;
-    height: 12vh;
+    height: 10vh;
     width: 100vw;
     justify-content: flex-end;
-    background: linear-gradient(120deg, rgba(110, 110, 110, 0.76), rgba(34, 34, 34, 0.746));
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(120deg, rgba(0, 0, 0, 0.76), rgba(255, 255, 255, 0.993));
   }
 }
 .nav-bar--initial {
@@ -766,6 +769,8 @@ body {
   .nav-bar__item {
     margin-top: 0vh;
     margin-right: 10vw;
+    height: 5vw;
+    flex-direction: row;
   }
 }
 .nav-bar__item:hover {
@@ -781,7 +786,7 @@ body {
 .nav-bar__item i {
   /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 144, 18) 60%);*/
   padding: 2vh;
-  font-size: 5vh;
+  font-size: 4vh;
 }
 .nav-bar__item i:hover {
   animation: bumping-icon 1s ease-in-out forwards;
