--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -115,10 +115,12 @@ body {
 
 .page-content {
   max-width: 75vw;
+  height: 80vh;
   @include desktop-only {
     max-width: 100%;
+    height: 70vh;
   }
-  height: 80vh;
+  
   margin-top: 8vh;
   margin-left: -100vw;
   position: absolute;
@@ -138,7 +140,7 @@ body {
   align-items: center;
   text-align: center;
   margin-bottom: 1vh;
-  padding-top: 5vh;
+  padding-top: 5vw;
   padding-bottom: 5vh;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
@@ -547,14 +549,16 @@ body {
     left: 100vw;
     align-items: flex-start;
     align-content: flex-end;
-    height: 12vh;
+    height:10vh;
     width: 100vw;
     justify-content: flex-end;
+    padding:0;
+    margin:0;
 
     background: linear-gradient(
       120deg,
-      rgba(110, 110, 110, 0.76),
-      rgba(34, 34, 34, 0.746)
+      rgba(0, 0, 0, 0.76),
+      rgba(255, 255, 255, 0.993)
     );
   }
 
@@ -601,6 +605,8 @@ body {
     @include desktop-only {
       margin-top: 0vh;
       margin-right: 10vw;
+      height:5vw;
+      flex-direction:row;
     }
     &:hover {
       color: orange;
@@ -617,7 +623,7 @@ body {
     & i {
       /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 144, 18) 60%);*/
       padding: 2vh;
-      font-size: 5vh;
+      font-size: 4vh;
       &:hover {
         animation: bumping-icon 1s ease-in-out forwards;
         /*background: linear-gradient(0deg, rgb(0, 0, 0), rgb(255, 255, 255) 60%);*/
