--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,20 +110,17 @@ The @ content directive allows for custom properties to be specified in the @inc
   }
 }
 @keyframes rotate-twice {
+  0% {
+    transform: scale(1) rotate(0deg);
+  }
   50% {
-    transform: rotate(720deg);
+    transform: scale(2) rotate(540deg);
   }
   100% {
-    transform: rotate(1440deg);
+    transform: scale(1) rotate(1080deg);
   }
 }
 @keyframes rotate-twice-anticlock {
-  33% {
-    transform: rotate(-360deg);
-  }
-  66% {
-    transform: rotate(-720deg);
-  }
   100% {
     transform: rotate(-1080deg);
   }
@@ -244,7 +241,7 @@ body {
   right: 0;
   background-color: black;
   z-index: 7;
-  animation: fade-out 5s ease-in forwards;
+  animation: fade-out 7s ease-in forwards;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -258,12 +255,13 @@ body {
   align-content: center;
   align-items: center;
   background-color: transparent;
-  border-top: 2vw solid orange;
-  border-bottom: 2vw solid orange;
-  border-left: 2vw solid white;
-  border-right: 2vw solid white;
-  animation: rotate-twice-anticlock 4s linear infinite;
+  border-top: 0.5vw solid orange;
+  border-bottom: 0.5vw solid orange;
+  border-left: 0.5vw solid rgba(255, 255, 255, 0);
+  border-right: 0.5vw solid rgba(255, 255, 255, 0);
+  animation: rotate-twice-anticlock 3s linear infinite;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .spin-loader__content img {
   display: flex;
@@ -716,10 +714,11 @@ body {
     align-content: flex-end;
     height: 10vh;
     width: 100vw;
-    justify-content: flex-end;
+    justify-content: left;
     padding: 0;
+    padding-left: 40vw;
     margin: 0;
-    background: linear-gradient(120deg, rgba(0, 0, 0, 0.76), rgba(255, 255, 255, 0.993));
+    background: linear-gradient(270deg, black 30%, #ff971f 60%, black 80%);
   }
 }
 .nav-bar--initial {
@@ -768,13 +767,16 @@ body {
 @media screen and (min-width: 1080px) {
   .nav-bar__item {
     margin-top: 0vh;
-    margin-right: 10vw;
-    height: 5vw;
+    margin-right: 2vw;
+    height: 10vh;
+    width: 10vw;
     flex-direction: row;
+    align-content: center;
   }
 }
 .nav-bar__item:hover {
-  color: orange;
+  color: black;
+  text-shadow: -0.3vw 0.3vw 0.5vw white;
 }
 .nav-bar__item--upside-down {
   transform: rotate(180deg);
