--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,7 +30,7 @@ body {
   right:0;
   background-color:rgb(0, 0, 0);
   z-index:7;
-  animation: fade-out 5s ease-in forwards;
+  animation: fade-out 7s ease-in forwards;
   align-items:center;
   justify-content: center;
   display:flex;
@@ -44,12 +44,13 @@ body {
     align-content:center;
     align-items:center;
     background-color:transparent;
-    border-top: 2vw solid orange;
-    border-bottom: 2vw solid orange;
-    border-left: 2vw solid rgb(255, 255, 255);
-    border-right: 2vw solid rgb(255, 255, 255);
-    animation: rotate-twice-anticlock 4s linear infinite;
+    border-top: 0.5vw solid orange;
+    border-bottom: 0.5vw solid orange;
+    border-left: 0.5vw solid rgba(255, 255, 255, 0);
+    border-right: 0.5vw solid rgba(255, 255, 255, 0);
+    animation: rotate-twice-anticlock 3s linear infinite;
     box-sizing:border-box;
+    overflow:hidden;
     
     & img {
       display:flex;
@@ -551,14 +552,16 @@ body {
     align-content: flex-end;
     height:10vh;
     width: 100vw;
-    justify-content: flex-end;
+    justify-content: left;
     padding:0;
+    padding-left: 40vw;
     margin:0;
 
     background: linear-gradient(
-      120deg,
-      rgba(0, 0, 0, 0.76),
-      rgba(255, 255, 255, 0.993)
+      270deg,
+      rgb(0, 0, 0) 30%,
+      rgb(255, 151, 31) 60%,
+      rgb(0, 0, 0) 80%
     );
   }
 
@@ -604,12 +607,15 @@ body {
 
     @include desktop-only {
       margin-top: 0vh;
-      margin-right: 10vw;
-      height:5vw;
+      margin-right: 2vw;
+      height:10vh;
+      width: 10vw;
       flex-direction:row;
+      align-content: center;
     }
     &:hover {
-      color: orange;
+      color: black;
+      text-shadow: -0.3vw 0.3vw 0.5vw white;
     }
 
     &--upside-down {
