--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -121,28 +121,25 @@
 }
 
 @keyframes rotate-twice {
+  0% {
+    transform:scale(1) rotate(0deg);
+  }
   50% {
-    transform: rotate(720deg);
+    transform:scale(2) rotate(540deg);
   }
   100% {
-    transform: rotate(1440deg);
+    transform:scale(1) rotate(1080deg);
   }
 }
 
 @keyframes rotate-twice-anticlock {
-  33% {
-    transform: rotate(-360deg);
+  0% {
 
-  }
-  66% {
-
-    transform: rotate(-720deg);
   }
   100% {
     transform: rotate(-1080deg);
-
-
   }
+
 }
 
 @keyframes opacity-to-one {
