--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,11 +30,12 @@ body {
   right:0;
   background-color:rgb(0, 0, 0);
   z-index:7;
-  animation: fade-out 7s ease-in forwards;
+  animation: fade-out 6s ease-in forwards;
   align-items:center;
   justify-content: center;
   display:flex;
-  flex-direction:row;
+  flex-direction:column;
+  
   }
   &__content {
     width: 30vw;
@@ -64,6 +65,10 @@ body {
       animation: rotate-twice 3s linear infinite;
       background-color:black;
     }
+  }
+  &__text {
+    color:white;
+    font-family:'Roboto'
   }
 }
 .main-content {
