--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -120,32 +120,50 @@
   }
 }
 
-@keyframes rotate-twice {
+@keyframes grow-then-shrink {
   0% {
-    transform:scale(1) rotate(0deg);
+    transform:scale(1) ;
   }
   50% {
-    transform:scale(2) rotate(540deg);
+    transform:scale(1.4) ;
   }
   100% {
-    transform:scale(1) rotate(1080deg);
+    transform:scale(1) ;
   }
 }
 
 @keyframes rotate-twice-anticlock {
   0% {
     
-    margin-bottom: 0;
+
 
   }
   50% {
     transform: rotate(-540deg);
-    margin-bottom:10vw
+
     
   }
   100% {
     transform: rotate(-1080deg);
-    margin-bottom: 0;
+
+  }
+}
+
+@keyframes hover-up-down {
+  0% {
+    margin-bottom:0;
+  }
+  25% {
+    margin-bottom:-5vh;
+  }
+  50% {
+    margin-bottom:0;
+  }
+  75% {
+    margin-bottom:5vh;
+  }
+  100% {
+    margin-bottom:0;
   }
 }
 
