--- a/public/css/style.css
+++ b/public/css/style.css
@@ -551,20 +551,26 @@ body {
 }
 .page-content--concert .concert-container {
   width: 90%;
+  flex-direction: column;
   height: max-content;
   display: flex;
-  flex-direction: column;
   align-items: center;
   background-color: white;
   border-radius: 1vh;
   margin-top: 3vh;
-  box-shadow: 1vh 1vh 0.5vh black;
-  border: 0.3vh solid #f55105;
+  box-shadow: 1vh 1vh 0.5vh black, -0.5vh -0.5vh 1.5vh white;
+  /*border: 0.3vh solid rgb(245, 81, 5);*/
 }
 @media screen and (min-width: 1080px) {
   .page-content--concert .concert-container {
-    width: 28%;
     margin-right: 3%;
+  }
+  .page-content--concert .concert-container:nth-child(even) {
+    flex-basis: 28%;
+    margin-top: 15vh;
+  }
+  .page-content--concert .concert-container:nth-child(odd) {
+    flex-basis: 28%;
   }
 }
 .page-content--concert .concert-container:hover {
